# rag-for-learning

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  rag.py
